Changelog
=========

1.2 (unreleased)
----------------

- Fixed cooptation edit template for Plone 4.
  [vincentfretin]


1.1 (2010-10-22)
----------------

- Use site name in user creation notification email.

1.0.17 (2009-05-06)
-------------------

- Initial release
