@@ -1,9 +1,19 @@
-<configure xmlns="http://namespaces.zope.org/zope" 
-           xmlns:browser="http://namespaces.zope.org/browser" 
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:browser="http://namespaces.zope.org/browser"
            xmlns:five="http://namespaces.zope.org/five"
            xmlns:i18n="http://namespaces.zope.org/i18n"
            i18n_domain="cooptation">
-  
+
+  <!-- ##code-section configure.zcml.header -->
+  <browser:page
+     for="*"
+     name="addcooptation"
+     class=".addcooptation.AddCooptation"
+     permission="zope2.View"
+     />
+  <include file="grok.zcml" />
+  <!-- ##/code-section configure.zcml.header -->
+
   <i18n:registerTranslations directory="locales" />
 
   <include file="profiles.zcml" />
