@@ -1,0 +1,7 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:grok="http://namespaces.zope.org/grok">
+
+  <include package="five.grok" />
+  <grok:grok package="." />
+
+</configure>
