@@ -2,15 +2,15 @@
                   dummy python:request.RESPONSE.setHeader('Content-Type', 'text/plain;; charset=%s' % context.plone_utils.getSiteEncoding());
                   actor_fullname python:options['actor_fullname'];
                   actor_email python:options['actor_email'];
-	              receipt_to_email python:options['receipt_to_email'];
-                  receipt_to_name python:options['receipt_to_name'];
+                  recipient_to_email python:options['recipient_to_email'];
+                  recipient_to_name python:options['recipient_to_name'];
                   username python:options['username'];
                   password python:options['password'];
                   portal_url python:options['portal_url'];
                   portal python:context.portal_url.getPortalObject();
                   "
 >From: "<span tal:replace="python:context.email_from_name" />" <span tal:replace="structure lt"/><span tal:replace="python:context.email_from_address" /><span tal:replace="structure gt"/>
-To: <span tal:replace="receipt_to_email" />
+To: <span tal:replace="recipient_to_email" />
 Subject: <span i18n:domain="cooptation" i18n:translate="cooptation_password_subject" tal:omit-tag="">Creation of your account</span>
 Reply-to: "<span tal:replace="actor_fullname" />" <span tal:replace="structure lt"/><span tal:replace="actor_email" /><span tal:replace="structure gt"/>
 Content-Type: text/plain; charset=<span tal:replace="context/email_charset|context/portal_properties/site_properties/default_charset|string:utf-8" />
@@ -18,7 +18,7 @@ Content-Type: text/plain; charset=<span tal:replace="context/email_charset|conte
 <div i18n:domain="cooptation"
      i18n:translate="hello"
      tal:omit-tag="">
-Hello <span i18n:name="receipt_to_name" tal:replace="receipt_to_name" />,</div>
+Hello <span i18n:name="recipient_to_name" tal:replace="recipient_to_name" />,</div>
 
 <div i18n:domain="cooptation"
      i18n:translate="cooptation_password_body1"
@@ -43,6 +43,14 @@ Your password: <span i18n:name="password" tal:replace="password" />
      tal:omit-tag="">
 Please log in to <span i18n:name="url" tal:replace="portal_url" />
 </div>
+
+<div i18n:domain="cooptation"
+     i18n:translate="you_have_role_on_workspace"
+     tal:define="workspace context/getWorkspace"
+     tal:condition="workspace"
+     tal:omit-tag="">
+You have the role <span i18n:name="role" i18n:domain="plone" i18n:translate="" tal:replace="context/getRole" /> on the following workspace:
+<span i18n:name="workspace_url" tal:replace="workspace/absolute_url" /></div>
 
 <div i18n:domain="cooptation"
      i18n:translate="greetings"
