@@ -2,11 +2,11 @@
                   dummy python:request.RESPONSE.setHeader('Content-Type', 'text/plain;; charset=%s' % context.plone_utils.getSiteEncoding());
                   actor_fullname python:options['actor_fullname'];
                   actor_email python:options['actor_email'];
-	                receipt_to_email python:options['receipt_to_email'];
-                  receipt_to_name python:options['receipt_to_name'];
+	                recipient_to_email python:options['recipient_to_email'];
+                  recipient_to_name python:options['recipient_to_name'];
                   "
 >From: "<span tal:replace="python:context.email_from_name" />" <span tal:replace="structure lt"/><span tal:replace="python:context.email_from_address" /><span tal:replace="structure gt"/>
-To: <span tal:replace="receipt_to_email" />
+To: <span tal:replace="recipient_to_email" />
 Subject: <span i18n:domain="cooptation" i18n:translate="cooptation_notification_subject" tal:omit-tag="">Cooptation of <span i18n:name="content_name" tal:omit-tag="" tal:content="python:context.Title()" /></span>
 Reply-to: "<span tal:replace="actor_fullname" />" <span tal:replace="structure lt"/><span tal:replace="actor_email" /><span tal:replace="structure gt"/>
 Content-Type: text/plain; charset=<span tal:replace="context/email_charset|context/portal_properties/site_properties/default_charset|string:utf-8" />
@@ -14,7 +14,7 @@ Content-Type: text/plain; charset=<span tal:replace="context/email_charset|conte
 <div i18n:domain="cooptation"
      i18n:translate="hello"
      tal:omit-tag="">
-Hello <span i18n:name="receipt_to_name" tal:replace="receipt_to_name" />,</div>
+Hello <span i18n:name="recipient_to_name" tal:replace="recipient_to_name" />,</div>
 
 <div i18n:domain="cooptation"
      i18n:translate="cooptation_notification_body"
