@@ -1,7 +1,6 @@
 [default]
 title=Register a User
-proxy=Manager,Anonymous
 
 [actions]
 action.failure=traverse_to_action:string:edit
-action.success=traverse_to_action:string:view
+action.success=redirect_to_action:string:view
