@@ -24,7 +24,7 @@ setup(name='Products.cooptation',
       zip_safe=False,
       install_requires=[
           'setuptools',
-          # -*- Extra requirements: -*-
+          'five.grok',
       ],
       entry_points="""
       # -*- Entry points: -*-
